ENG-27397: Compile meshmonitor with Java 17 (#15)